fix: flex wrap items

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -137,3 +137,7 @@ p {
   height: 75px;
   width: 75px;
 }
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
